# iot-webapp

./: readme.md  sensor_data.csv
backend/: .dockerignore  .gitignore  Dockerfile  database.py  main.py  models.py  pyproject.toml  requirements.txt  services.py  startup.sh
backend/routers/: sensor.py
backend/scripts/: init_db.py  simulate_sensor.py
deployment/: docker-compose.yml  simulation.Dockerfile
deployment/scripts/: simulate_sensor.py
frontend/: .dockerignore  Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: CurrentValues.vue  SensorChart.vue  StatsCard.vue
frontend/src/types/: index.ts
