[tool.poetry]
name = "scgp-iot-testing-backend"
version = "0.1.0"
description = "Backend service for SCGP IoT Testing"
authors = ["supakorn emch"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.23"
pandas = "^2.1.3"
scipy = "^1.11.3"
python-multipart = "^0.0.6"
pydantic = "^2.5.2"
pyyaml = "^6.0.2"
requests = "^2.32.3"
websockets = "^14.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
